--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,12 @@
       <load src="./partials/vite-promo.html" />
       <load src="./partials/badges.html" />
     </main>
+ <ul>
+   <li><a href="./1-gallery.html">Gallery</a></li>
+   <li><a href="./2-form.html">Form</a></li>
+ </ul>
 
     <load src="./partials/footer.html" />
 
-    <script type="module" src="./main.js"></script>
   </body>
 </html>
