--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -11,10 +11,11 @@
 </head>
 
 <body>
-  
+    <load src="./partials/header.html" icon-path="./img/sprite.svg#logo" highlight-curr="active" />
   <ul class="gallery-item"></ul>
 
   <script src="./js/1-gallery.js" type="module"></script>
+      <load src="./partials/footer.html" />
 </body>
 
 </html>
