--- a/src/2-form.html
+++ b/src/2-form.html
@@ -16,13 +16,22 @@
 
     <main>
       <div class="container">
-        <h1 class="main-title">
-          <span class="main-title-gradient">Welcome</span> to page 3
-        </h1>
-        <load src="./partials/back-link.html" />
+      <form class="feedback-form" autocomplete="off">
+        <label>
+          Email
+          <input type="email" name="email" autofocus />
+        </label>
+        <label>
+          Message
+          <textarea name="message" rows="8"></textarea>
+        </label>
+        <button type="submit">Submit</button>
+      </form>
       </div>
     </main>
 
+
+<script src="./js/2-form.js"></script>
     <load src="./partials/footer.html" />
   </body>
 </html>
