--- a/src/index.html
+++ b/src/index.html
@@ -7,14 +7,20 @@
     <title>Vanilla App Template</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
+  <body> 
+   
     <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
-
+ <ul>
+       <li><a href="./1-gallery.html">Gallery</a></li>
+      <li><a href="./2-form.html">Form</a></li>
+    </ul>
     <main>
       <!-- Loads the specified .html file -->
       <load src="./partials/vite-promo.html" />
       <load src="./partials/badges.html" />
     </main>
+
+   
 
 
     <load src="./partials/footer.html" />
