--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
    
     <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
  <ul>
-       <li><a href="./1-gallery.html">Gallery</a></li>
-      <li><a href="./2-form.html">Form</a></li>
+      <li><a href="./1-gallery.html">Gallery</a></li>
+      <li><a href="./js/2-form.js">Form</a></li>
     </ul>
     <main>
       <!-- Loads the specified .html file -->
