--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
  <ul>
       <li><a href="./1-gallery.html">Gallery</a></li>
-      <li><a href="./js/2-form.js">Form</a></li>
+      <li><a href="./2-form.html">Form</a></li>
     </ul>
     <main>
       <!-- Loads the specified .html file -->
