--- a/src/2-form.html
+++ b/src/2-form.html
@@ -31,7 +31,8 @@
     </main>
 
 
-    <script src="./js/2-form.js"></script>
+    <script type="module" src="./js/2-form.js"></script>
+
     <load src="./partials/footer.html" />
   </body>
 </html>
